--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 RUN rm -rf /user/share/nginx/html/index.html
-copy roboshop.conf /etc/nginx/default.d/roboshop.conf
+COPY roboshop.conf /etc/nginx/default.d/roboshop.conf
 ADD static /user/share/nginx/html/
