--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,10 @@ services:
   catalogue:
     image: catalogue
     depends_on: mongodb
+
+  web:
+    image: web
+    ports:
+    - "80:80"
+    depends_on: 
+    - catalogue
