--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,17 @@ networks:
 services:
 # docker run -d --name mongodb --network=roboshop mongodb:v1
   mongodb:
-    image: mongodb
+    image: mongodb:v1
+    container_name: mongodb
 
   catalogue:
-    image: catalogue
+    image: catalogue:v1
+    container_name: catalogue
     depends_on:
     - mongodb
 
   # web:
-  #   image: web
+  #   image: web:v1
   #   ports:
   #   - "80:80"
   #   depends_on: 
