--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,9 @@ services:
     depends_on:
     - mongodb
 
-  # web:
-  #   image: web:v1
-  #   ports:
-  #   - "80:80"
-  #   depends_on: 
-  #   - catalogue
+  web:
+    image: web:v1
+    ports:
+    - "80:80"
+    depends_on: 
+    - catalogue
