--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,13 @@ services:
     - "80:80"
     depends_on: 
     - catalogue
+
+  redis:
+    image: redis
+
+  user:
+    image: user:v1
+    container_name: user
+    depends_on:
+    - mongodb
+    - redis
