--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
     - "80:80"
     depends_on: 
     - catalogue
+    - user
+    - cart
 
   redis:
     image: redis
@@ -31,4 +33,10 @@ services:
     container_name: user
     depends_on:
     - mongodb
+    - redis
+
+  cart:
+    image: cart:v1
+    container_name: cart
+    depends_on:
     - redis
