--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
 
   redis:
     image: redis
+    container_name: redis
 
   user:
     image: user:v1
@@ -40,3 +41,4 @@ services:
     container_name: cart
     depends_on:
     - redis
+    - catalogue
