--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -1,11 +1,22 @@
-FROM node:18
+# FROM node:18
+# EXPOSE 8080
+# WORKDIR /opt/server/
+# ENV MONGO=true
+# copy package.json /opt/server/
+# copy server.js /opt/server/
+# RUN npm install
+# CMD ["node", "server.js"]
+
+#best practices
+
+FROM node:18.19.1-alpine3.19
 EXPOSE 8080
-WORKDIR /opt/server/
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
+WORKDIR /opt/server
 ENV MONGO=true
-copy package.json /opt/server/
-copy server.js /opt/server/
+RUN chown roboshop:roboshop /opt/server
+USER roboshop
+COPY package.json /opt/server/
+COPY server.js /opt/server/
 RUN npm install
 CMD ["node", "server.js"]
-
-
-
