--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,28 @@ networks:
   default:
     external:
       name: roboshop
-
+volumes:
+  mongodb: #docker volume create mongodb
+  redis:
+  mysql:
+  rabbitmq:
 services:
-# docker run -d --name mongodb --network=roboshop mongodb:v1
+  # docker run -d --name mongodb --network=roboshop mongodb:1
   mongodb:
     image: mongodb:v1
     container_name: mongodb
+    volumes:
+    - source: mongodb
+      target: /data/db
+      type: volume
+    # networks:
+    # - roboshop
 
   catalogue:
     image: catalogue:v1
     container_name: catalogue
+    # networks:
+    # - roboshop
     depends_on:
     - mongodb
 
@@ -20,23 +32,27 @@ services:
     container_name: web
     ports:
     - "80:80"
-    depends_on: 
+    depends_on:
     - catalogue
-    - user
     - cart
+    - user
     - shipping
     - payment
 
   redis:
     image: redis
     container_name: redis
+    volumes:
+    - source: redis
+      target: /data
+      type: volume
 
   user:
     image: user:v1
     container_name: user
     depends_on:
-    - mongodb
     - redis
+    - mongodb
 
   cart:
     image: cart:v1
@@ -48,6 +64,10 @@ services:
   mysql:
     image: mysql:v1
     container_name: mysql
+    volumes:
+    - source: mysql
+      target: /var/lib/mysql
+      type: volume
 
   shipping:
     image: shipping:v1
@@ -61,7 +81,11 @@ services:
     environment:
     - RABBITMQ_DEFAULT_USER=roboshop
     - RABBITMQ_DEFAULT_PASS=roboshop123
-  
+    volumes:
+    - source: rabbitmq
+      target: /var/lib/rabbitmq
+      type: volume
+
   payment:
     container_name: payment
     image: payment:v1
